website: Fix API nav submenu overflow.

--- a/warp-charger.com/css/style.css
+++ b/warp-charger.com/css/style.css
@@ -302,6 +302,10 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 99;
 }
 
+.nav-menu ul.push-left {
+  left: -150px;
+}
+
 .nav-menu li {
   position: relative;
   white-space: nowrap;
